--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "express-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -14,15 +17,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.0.0",
-    "morgan": "^1.10.0"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.13",
+    "morgan": "^1.10.0",
+    "pg": "^7.8.0",
+    "postgrator-cli": "^3.2.0",
+    "treeize": "^2.1.2",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
   }
