--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "migrate:test": "NODE_ENV=test npm run migrate",
     "migrate:production": "heroku run npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "predeploy": "npm audit"
   },
   "keywords": [],
   "engines": {
