--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "pg": "^7.8.0",
     "postgrator-cli": "^3.2.0",
+    "socket.io": "^2.3.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.3"
   },
