--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
     "morgan": "^1.10.0",
     "pg": "^7.8.0",
     "postgrator-cli": "^3.2.0",
+    "socket.io": "^2.3.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
-    "nodemon": "^2.0.5",
+    "nodemon": "^2.0.6",
     "supertest": "^4.0.2"
   }
 }
