--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
+    "mathjs": "^8.0.1",
     "morgan": "^1.10.0",
     "pg": "^7.8.0",
     "postgrator-cli": "^3.2.0",
